# pouf

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  _pouf  build.rs  pouf.bash  pouf.fish
.github/workflows/: ci.yml
examples/templates/: color.css  color_example.css  example.json  isbn.txt  lorem.html  misc.txt  people.json
src/: cli.rs  lib.rs  macros.rs  main.rs
src/domain/: address.rs  administrative.rs  auto.rs  barcode.rs  barecode.rs  color.rs  filesystem.rs  finance.rs  http.rs  internet.rs  lorem.rs  mod.rs  people.rs  time.rs
src/template/: address.rs  automotive.rs  barecode.rs  color.rs  coordinates.rs  currency.rs  filesystem.rs  generator.rs  http.rs  internet.rs  job.rs  lorem.rs  mod.rs  parser.rs  people.rs  phone.rs  template.pest  template.rs  template_trait.rs  timezone.rs
tests/: template.rs
tests/errors/: people_one.json
