[package]
name = "pouf"
version = "0.4.1"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]
description = "Pouf is a cli program for produce fake datas."
keywords = ["app", "cli", "faker", "data", "random"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mothsart/pouf"
homepage = "https://github.com/mothsart/pouf"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version="3.1", features=['cargo'] }
fake = { version="2.4.3", features=['chrono', 'http', 'semver'] }

chrono = { version = "0.4" }
http = { version = "0.2" }
semver = { version = "1" }

[build-dependencies]
clap = { version="3.1", features=['cargo']  }
clap_complete = { version="3.1" }
