[package]
name = "pouf"
version = "0.6.3"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]
description = "Pouf is a cli program for produce fake datas."
keywords = ["app", "cli", "faker", "data", "random"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mothsart/pouf"
homepage = "https://github.com/mothsart/pouf"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version="4.0", features=['cargo'] }
fake = { version="2.5", features=['chrono', 'http', 'semver', 'random_color'] }

chrono = { version = "0.4" }
http = { version = "0.2" }
semver = { version = "1" }
unidecode = "0.3"
rand = "0.8"

[build-dependencies]
clap = { version="4.0", features=['cargo']  }
clap_complete = { version="4.0" }
