[package]
name = "pouf"
version = "0.6.3"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]
description = "Pouf is a cli program for produce fake datas."
keywords = ["app", "cli", "faker", "data", "random"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mothsart/pouf"
homepage = "https://github.com/mothsart/pouf"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version="4.3", features=['cargo'] }
random_color = "0.6"
fake = { version="2.5", features=['chrono', 'http', 'semver', 'random_color'] }

chrono = { version = "0.4" }
http = { version = "0.2" }
semver = { version = "1" }
unidecode = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
pest = "2.5"
pest_derive = "2.5"
tera = "1.17"

proc-macro2 = "1"
syn = "^2"
askama_parser = "0.2"

[build-dependencies]
clap = { version="4.3", features=['cargo']  }
clap_complete = { version="4.3" }
